# cse396-desktop

./: CMakeLists.txt  CMakeLists.txt.user.dd67b83  CMakeLists.txt.user.f46ad50  Camera.h  ColorPickerWidget.h  EditableLabel.h  ImagePickerWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  calibration.cpp  calibration.h  capturedimages.cpp  capturedimages.h  communication.cpp  communication.h  connection.cpp  connection.h  footer.cpp  footer.h  global.h  main.cpp  openglwidget.cpp  openglwidget.h  pointcloud.cpp  pointcloud.h  scannedpoints.cpp  scannedpoints.h  scanner.cpp  scanner.h  utility.h
res/shaders/: shader.ps  shader.vs
